--- a/03/07/login.css
+++ b/03/07/login.css
@@ -1,20 +1,21 @@
 body{
+
   margin: 0%;
   padding: 0%;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   background: blueviolet;
-  height: 100%;
+  height: 100vh;
+  display: flex;
   overflow: hidden;
-
+  justify-content: center;
+  align-items: center;
 }
 .content{
-  position: absolute;
-  top:50%;
-  left: 50%;
   width: 400px;
   box-shadow: 5px 5px ;
   background: white;
   border-radius: 10px;
+  
 }
 .content h1{
   text-align: center;
